// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<button
  className="flex-child btn btn--s color-gray-dark
          bg-gray-faint
          "
  disabled={false}
  onClick={[Function]}
>
  &lt;
</button>
`;

exports[`renders correctly 2`] = `
<button
  className="flex-child btn btn--s color-gray-dark
          is-active bg-gray-light
          "
  disabled={undefined}
  onClick={[Function]}
>
  4
</button>
`;
